--- a/12/12.tex
+++ b/12/12.tex
@@ -37,7 +37,7 @@ $$\theta(y_{t}) + \theta(y_{t-1},y_{t})$$
 What did we gain from this abstraction? Because all of these models have the same comditional independence structure, we are able to run the same algorithm for inference on all of these parameterizations (sum-product). Thus, conditioned on observed data, we may find the exact marginals: $p(y_{s}=v)$
 \smallskip
 
-Perhaps these structures are not necessary? Is exact inference required in cases where there is alot of data? Yes.
+Perhaps these structures are not necessary? Is exact inference required in cases where there is alot of data?
 
 \subsection{RNNs}
 \subsubsection{What is an RNN?}
