--- a/12/12.tex
+++ b/12/12.tex
@@ -281,7 +281,7 @@ RNNs have been used successfully as speech generators, taking in a sequence of l
 
 \subsubsection{Solution}
 
-The architecture of the RNN can be conveniently implemented with torch.nn. As our training data, we downloaded all of Donald Trump's 2016 campaign speeches from \url{http://www.presidency.ucsb.edu/2016_election.php}. The concatenated data is available \href{run:speeches_concat.txt}{here} (size: 1.3 MB). To facilitate the training process, we only included lowercase letters and a few additional symbols \verb| .:?[]| from the raw data, for a total of \verb|n_letters=32| characters. We then assembled a training set by randomly drawing 10,000 30-character sequences from the data, and used each of these to predict the next (31st) characters. We also generated a validation set by similarly drawing 500 additional character sequences. All of the input data must be converted to one-hot vectors: the entire training set was stored as an 30x10000x32 array, as required by \verb|torch.nn.LSTM| below.
+The architecture of the RNN can be conveniently implemented with torch.nn. As our training data, we downloaded all of Donald Trump's 2016 campaign speeches from \url{http://www.presidency.ucsb.edu/2016_election.php}. The concatenated data is available in \verb|concat_speeches.txt| (size: 1.3 MB). To facilitate the training process, we only included lowercase letters and a few additional symbols \verb| .:?[]| from the raw data, for a total of \verb|n_letters=32| characters. We then assembled a training set by randomly drawing 10,000 30-character sequences from the data, and used each of these to predict the next (31st) characters. We also generated a validation set by similarly drawing 500 additional character sequences. All of the input data must be converted to one-hot vectors: the entire training set was stored as an 30x10000x32 array, as required by \verb|torch.nn.LSTM| below.
 
 We then proceeded to set up an RNN with long-short term memory (LSTM), 2 layers, and \verb|n_hidden=200| as follows:
 \begin{lstlisting}[language=Python]
@@ -322,7 +322,7 @@ Trump:ey southon fac cort the whale getton. buoller campouse tilathad sumplee ou
 \end{lstlisting}
 However, both training and validation losses were still, at that point, declining rapidly. Thus, further training will likely result in an improved performance.
 
-This solution is merely an outline to a plausible more successful algorithm. In particular, we can expand the size of the model, the number of training sequences, or the sequence length, or tweak other relevant model parameters to train a smarter speech generator. The Python code used for this write-up can be downloaded \href{run:trump_generator.py}{here}.
+This solution is merely an outline to a plausible more successful algorithm. In particular, we can expand the size of the model, the number of training sequences, or the sequence length, or tweak other relevant model parameters to train a smarter speech generator. The Python code used for this write-up is included as \verb|trump_generator.py|.
 
 \end{remark}
 \end{document}
